welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: ';' expected but ',' found.
			else {droite();avance(),droite()}
                                               ^